[tool.poetry]
name = "repl_python3_pythonclocktimer"
version = "0.1.0"
description = ""
authors = ["jarvis0530 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"
PySimpleGUI = "^4.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
